Refactor wallet functionality and remove unused authentication and coin actions
- Implemented transfer money functionality in TransferForm component.
- Updated Wallet component to handle fetching user wallet and transactions.
- Created WithdrawForm component for withdrawal requests with payment method check.
- Added Withdrawal component to display withdrawal history.
- Removed obsolete authentication and coin action files and types.
- Enhanced Watchlist component with improved UI and functionality.
- Added CSS for withdrawal input styling.

--- a/src/page/Auth/Auth.css
+++ b/src/page/Auth/Auth.css
@@ -1,16 +1,26 @@
-.authContainer {
-  background-image: url("https://dx.trade/app/uploads/2024/05/DXtrade-XT-A-Trading-Platform-for-Stock-Brokers-of-All-Sizes.png");
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins","san-serif";
+}
+/* https://cdn.pixabay.com/photo/2022/12/26/11/37/bitcoin-7678812_1280.jpg */
+.authContainer{
+  background-image: url("/public/crypto-7678815_1920.jpg");
   height: 100vh;
   width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  
 }
-.overlay {
-  position: absolute;
-  z-index: 1;
-}
-
-.bgBlur {
+.bgBlure{
   backdrop-filter: blur(10px);
 }
+
+
+
+
+  
+ 
+     
